[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Trainer.gd" type="Script" id=4]

[node name="Main" type="Node2D"]

[node name="Icon2" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 608, 406 )
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="Target" type="Sprite" parent="." groups=["target"]]
modulate = Color( 0, 1, 0.156863, 1 )
position = Vector2( 893, 522 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Trainer" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
margin_right = 166.0
margin_bottom = 173.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 159.0
margin_bottom = 185.0
script = ExtResource( 2 )

[node name="CurrentRun" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 14.0
text = "Last Run:"

[node name="PreviusBestScore" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 152.0
margin_bottom = 32.0
text = "Best Score:"

[node name="PreviusBestScore2" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 152.0
margin_bottom = 50.0
text = "Timescale"
align = 1

[node name="Timescale" type="HSlider" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 152.0
margin_bottom = 70.0
max_value = 5.0

[node name="PreviusBestScore3" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 152.0
margin_bottom = 88.0
text = "Mutation Rate"
align = 1

[node name="MutationRate" type="HSlider" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 152.0
margin_bottom = 108.0
max_value = 0.1
step = 0.001
value = 0.004

[node name="PreviusBestScore4" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 152.0
margin_bottom = 126.0
text = "Number of AI"
align = 1

[node name="NumberOfAI" type="SpinBox" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 152.0
margin_bottom = 154.0
min_value = 1.0
max_value = 2000.0
value = 100.0

[node name="Restart" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 152.0
margin_bottom = 178.0
text = "Restart"
